--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
         <span>H</span>
         <span>A</span>
         <span>I</span>
-        <span>K</span>
-        <span>E</span>
-        <span>L</span>
-        <span>V</span>
-        <span>I</span>
         <span>N</span>
+        <span>U</span>
+        <span>W</span>
+        <span>A</span>
+        <span>A</span>
+        <span>A</span>
     </div>
     <div class="description">
-        <span>Aku punya hadiah spesial buat SIKONTOL....</span>
+        <span>AKU PUNYA HADIAHHH NEEEE....</span>
+        <span>BIAR SEMANGAT KEGIATAN NYA</span>
     </div>
     <div class="button">
         <button>
