--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
         <span>A</span>
-        <span>I</span>
+        <span>L</span>
+        <span>O</span>
         <span>N</span>
         <span>U</span>
         <span>W</span>
         <span>A</span>
-        <span>A</span>
-        <span>A</span>
+        
     </div>
     <div class="description">
-        <span>AKU PUNYA HADIAHHH NEEEE....</span>
+        <span>AKU PUNYA HADIAHHH NEEEE</span>
+        
         <span>BIAR SEMANGAT KEGIATAN NYA</span>
     </div>
     <div class="button">
