--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         
     </div>
     <div class="description">
-        <span>AKU PUNYA HADIAHHH NEEEE</span>
+        <span>aku aya bunga yeh</span>
         
-        <span>BIAR SEMANGAT KEGIATAN NYA</span>
+        <span>biar semangat kerjanya WKWKWK</span>
     </div>
     <div class="button">
         <button>
