--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <span>A</span>
         <span>L</span>
         <span>O</span>
-        <span>N</span>
-        <span>U</span>
         <span>W</span>
         <span>A</span>
-        
+        <span>N</span>
+        <span>D</span>
+        <span>A</span>
     </div>
     <div class="description">
-        <span>AKU PUNYA HADIAHHH NEEEE</span>
+        <span>AKU PUNYA HADIAHHH NICHHH</span>
         
-        <span>BIAR SEMANGAT KEGIATAN NYA</span>
+        <span>BUAT MANTAN TERCINTA WKWKWWK</span>
     </div>
     <div class="button">
         <button>
