--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
         <span>H</span>
-        <span>A</span>
-        <span>L</span>
-        <span>O</span>
+        <span>I</span>
+        
         <span>W</span>
         <span>A</span>
         <span>N</span>
         <span>D</span>
         <span>A</span>
+        <span>!</span>
+        <span>!</span>
+        <span>!</span>
     </div>
     <div class="description">
         <span>AKU PUNYA HADIAHHH NICHHH</span>
